# RPT_NaI_4array

./: .gitignore  CMakeLists.txt  LICENSE  README.md  action.cc  action.hh  am241.mac  co60.mac  cs137.mac  det_reader1.C  det_reader2.C  det_reader3.C  det_reader4.C  detectorconstruction.cc  detectorconstruction.hh  detectormessenger.cc  detectormessenger.hh  event.cc  event.hh  g_s.mac  generator.cc  generator.hh  lines_rpt.sh  matrix_rpt.sh  naidetector.cc  physicslist.cc  physicslist.hh  rpt_pos.sh  runaction.cc  runaction.hh  stacking.cc  stacking.hh  stackingmessenger.cc  stackingmessenger.hh  stepping.cc  stepping.hh
data_/: rpt_pos.sh
lines/macros/: traje100pos1.mac  traje100pos10.mac  traje100pos100.mac  traje100pos101.mac  traje100pos102.mac  traje100pos103.mac  traje100pos104.mac  traje100pos105.mac  traje100pos106.mac  traje100pos107.mac  traje100pos108.mac  traje100pos109.mac  traje100pos11.mac  traje100pos110.mac  traje100pos111.mac  traje100pos112.mac  traje100pos113.mac  traje100pos114.mac  traje100pos115.mac  traje100pos116.mac  traje100pos117.mac  traje100pos118.mac  traje100pos119.mac  traje100pos12.mac  traje100pos120.mac  traje100pos121.mac  traje100pos122.mac  traje100pos123.mac  traje100pos124.mac  traje100pos125.mac  traje100pos126.mac  traje100pos127.mac  traje100pos128.mac  traje100pos129.mac  traje100pos13.mac  traje100pos130.mac  traje100pos131.mac  traje100pos132.mac  traje100pos133.mac  traje100pos134.mac  (+39960 more)
lines/results/: pos1.mac
matrix/macros/: pos1.mac  pos10.mac  pos100.mac  pos1000.mac  pos10000.mac  pos10001.mac  pos10002.mac  (+39993 more)
(+9983 files in other folders)
